--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -8,7 +8,30 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/buttonLoadPicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Load Picture" />
 
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload" />
+
+    <Button
+        android:id="@+id/download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Download static" />
+
+    <Button
+        android:id="@+id/displayDownload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="display download"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="450dp">
@@ -16,8 +39,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="50dp" />
+            android:layout_height="400dp" />
 
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/regLoadingScreen"
@@ -29,19 +51,5 @@
     </RelativeLayout>
 
 
-    <Button
-        android:id="@+id/buttonLoadPicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="0"
-        android:text="Load Picture"
-         />
 
-    <Button
-        android:id="@+id/upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload"
-        />
 </LinearLayout>
