added function autorename if pompom.png is exist then it will be pompom (1).png

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="display download"/>
+    <Button
+        android:id="@+id/links"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get links"/>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="450dp">
+        android:layout_height="300dp">
 
         <ImageView
             android:id="@+id/imageView"
